Tog bort all använding av sqlString, för den sög och pajade hemsidan väldigt väldigt mycket (samt gjorde det svårt att läsa igenom Databasen....), så nu används det där med komman och sånt, vilket är generellt bättre!